--- a/Schoolclass.html
+++ b/Schoolclass.html
@@ -5,6 +5,12 @@
 </head>
  <link rel="stylesheet" href="Schoolclass.css">
  <link rel="preconnect" href="https://fonts.gstatic.com">
+
+ <!-- add icon link -->
+<link rel = "icon" href = 
+"zoom.ico" 
+type = "image/x-icon">
+
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -97,23 +103,23 @@ target="_blank" style="color:#2C3E50">Sinhala (Jayantha Sir)
  <br>
   <!-- Add font awesome icons -->
   <p>
- <a href="https://www.w3schools.com" target="_blank" style="font-size: 40px;" class="fa fa-facebook"></a>
-  &nbsp;
-  &nbsp;
-  &nbsp;
-  &nbsp;
-  &nbsp;
-  <a href="#" target="_blank" style="font-size: 40px;" class="fa fa-twitter"></a>
- &nbsp;
- &nbsp;
- &nbsp;
- &nbsp;
-  &nbsp;
- <a href=""  style="font-size: 40px;" target="_blank" class="fa fa-instagram"></a>
- </p>
- <br>
- <h4>
- <p>2021 <span>&#169;</span> by  Neth  Pehesara  Botheju.</p>
+  <a href="https://www.facebook.com/neth.pehesara.botheju" target="_blank" style="font-size: 40px;" class="fa fa-facebook"></a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a href="https://twitter.com/nethbotheju" target="_blank" style="font-size: 40px;" class="fa fa-twitter"></a>
+   &nbsp;
+   &nbsp;
+   &nbsp;
+   &nbsp;
+    &nbsp;
+   <a href="https://www.instagram.com/neth_botheju/"  style="font-size: 40px;" target="_blank" class="fa fa-instagram"></a>
+   </p>
+   <br>
+   <h4>
+   <p>2021 <span>&#169;</span> by  Neth  Pehesara  Botheju.</p>
 </h4>
 
 </DIV>
