--- a/Schooltimetable.html
+++ b/Schooltimetable.html
@@ -8,6 +8,11 @@
 
         <link rel="stylesheet" href="Schooltimetable.css">
 
+        <!-- add icon link -->
+<link rel = "icon" href = 
+"zoom.ico" 
+type = "image/x-icon">
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     
@@ -42,24 +47,24 @@
            <br>
             <!-- Add font awesome icons -->
             <p>
-           <a href="https://www.w3schools.com" target="_blank" style="font-size: 40px;" class="fa fa-facebook"></a>
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            &nbsp;
-            <a href="#" target="_blank" style="font-size: 40px;" class="fa fa-twitter"></a>
-           &nbsp;
-           &nbsp;
-           &nbsp;
-           &nbsp;
-            &nbsp;
-           <a href=""  style="font-size: 40px;" target="_blank" class="fa fa-instagram"></a>
-           </p>
-           <br>
-           <h4>
-           <p>2021 <span>&#169;</span> by  Neth  Pehesara  Botheju.</p>
-          </h4>
+                <a href="https://www.facebook.com/neth.pehesara.botheju" target="_blank" style="font-size: 40px;" class="fa fa-facebook"></a>
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                &nbsp;
+                <a href="https://twitter.com/nethbotheju" target="_blank" style="font-size: 40px;" class="fa fa-twitter"></a>
+               &nbsp;
+               &nbsp;
+               &nbsp;
+               &nbsp;
+                &nbsp;
+               <a href="https://www.instagram.com/neth_botheju/"  style="font-size: 40px;" target="_blank" class="fa fa-instagram"></a>
+               </p>
+               <br>
+               <h4>
+               <p>2021 <span>&#169;</span> by  Neth  Pehesara  Botheju.</p>
+            </h4>
           
           </DIV>
         </center>
