--- a/Zoom.html
+++ b/Zoom.html
@@ -17,6 +17,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
+<!-- add icon link -->
+<link rel = "icon" href = 
+"zoom.ico" 
+type = "image/x-icon">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -88,19 +93,19 @@
        <br>
         <!-- Add font awesome icons -->
         <p>
-       <a href="https://www.w3schools.com" target="_blank" style="font-size: 40px;" class="fa fa-facebook"></a>
+       <a href="https://www.facebook.com/neth.pehesara.botheju" target="_blank" style="font-size: 40px;" class="fa fa-facebook"></a>
         &nbsp;
         &nbsp;
         &nbsp;
         &nbsp;
         &nbsp;
-        <a href="#" target="_blank" style="font-size: 40px;" class="fa fa-twitter"></a>
+        <a href="https://twitter.com/nethbotheju" target="_blank" style="font-size: 40px;" class="fa fa-twitter"></a>
        &nbsp;
        &nbsp;
        &nbsp;
        &nbsp;
         &nbsp;
-       <a href=""  style="font-size: 40px;" target="_blank" class="fa fa-instagram"></a>
+       <a href="https://www.instagram.com/neth_botheju/"  style="font-size: 40px;" target="_blank" class="fa fa-instagram"></a>
        </p>
        <br>
        <h4>
