--- a/Zoom.html
+++ b/Zoom.html
@@ -48,7 +48,7 @@ type = "image/x-icon">
 <h2>
     <button class="btn info">
         <a
-    href="Zoom.pdf"
+    href="School Time Table.html"
     target="_blank" style="color: #fdfdfd;" >School Classes</a>
     </button>
 </h2>
