--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom Classes</title>
 
-    <link rel="stylesheet" href="homestyle.css">
+    <link rel="stylesheet" href="Home/homestyle.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Charmonman&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
 <!-- add icon link -->
 <link rel = "icon" href = 
-"zoom.ico" 
+"Files/zoom.ico" 
 type = "image/x-icon">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,7 +48,7 @@ type = "image/x-icon">
 <h2>
     <button class="btn info">
         <a
-    href="School Time Table.html"
+    href="Files/School Time Table.html"
     target="_blank" style="color: #fdfdfd;" >School Classes</a>
     </button>
 </h2>
@@ -63,7 +63,7 @@ type = "image/x-icon">
 <h2>
     <button class="btn info">
         <a
-    href="Tution Class.html"
+    href="Files/Tution Class.html"
     target="_blank" style="color: #fdfdfd;" >Tution Classes</a>
     </button>
 </h2>
